syntax = "proto3";

option java_package = "com.zacle.spendtrack.core.datastore";
option java_multiple_files = true;

enum ThemeAppearanceProto {
    THEME_APPEARANCE_SYSTEM = 0;
    THEME_APPEARANCE_DARK = 1;
    THEME_APPEARANCE_LIGHT = 2;
}